# BlogAPI

./: .env.example  .gitignore  README.md  WORK.md  alembic.ini  jwt_tester.py  main.py  pyproject.toml  ruff.toml  start.sh
certificates/: README_OF_JWT.md
docker/: docker-compose.yml  postgres.env.exaple  redis.acl.example
migrations/: env.py
migrations/versions/: 2026_06_13_2248-aa4f4840f2ad_users_roles_and_profiles_tables.py  2026_07_01_1627-5bc85dc69914_posts_and_commetns_tables.py
src/config/: __init__.py  config.py  exception.py  jwt_setup.py
src/domain/content/dto/: __init__.py  posts.py  profiles.py
src/domain/content/repositories/: comments.py  posts.py  profile.py
src/domain/content/schemas/: __init__.py  comments.py  posts.py  profile.py
src/domain/content/use_cases/: __init__.py  profiles_update.py  uow.py
src/domain/identity/: dto.py
src/domain/identity/dto/: __init__.py  roles.py  users.py  users_roles.py
src/domain/identity/repositories/: roles.py  users.py  users_roles.py
src/domain/identity/schemas/: roles.py  users.py
src/domain/identity/services/: __init__.py  jwt_service.py  password_service.py  verification_service.py
src/domain/identity/use_cases/: __init__.py  activate_user_usecase.py  get_users.py  (+5 more)
src/infrastructure/: lifespan.py
src/infrastructure/database/: __init__.py  base_repo.py  connection.py  uow.py
src/infrastructure/notifications/: __init__.py  abstract.py  depends.py  local.py  production.py
src/infrastructure/redis/: __init__.py  connection.py
src/presentation/api/: dependecies.py  handlers.py
(+39 files in other folders)
